<resources>
    <string name="app_name">Lockscreen</string>
    <string name="please_enter_your_password">Enter PIN</string>
    <string name="email">E-mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="companyName">Company Name</string>
    <string name="birthDate">Birth Date</string>
    <string name="addressName">Address</string>
    <string name="bit_of_truth">To generate convincing fake data, we use a bit of real information. A better lie is one mixed with a bit of truth :D</string>
    <string name="fake_data_information_input">Fake Data Information Input</string>
    <string name="lockout">Lockout</string>
    <string name="settings">Settings</string>
    <string name="start_fake_lock">Start Fake Lock</string>
    <string name="stop_fake_lock">Stop Fake Lock</string>
    <string name="setup_button">Setup</string>
    <string name="app_select">Customize Fake</string>
    <string name="save_button">Save</string>
    <string name="set_real_password">Set real password</string>
    <string name="set_fake_password">Set fake password</string>
</resources>
