<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/lockout"
        android:textAlignment="center"
        android:textSize="22sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/settings"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />

    <TextView
        android:id="@+id/settings_fake_data_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/fake_data_information_input"
        android:textSize="20sp" />

    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#c0c0c0" />

    <TextView
        android:id="@+id/customize_fake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/set_fake_password"
        android:textSize="20sp" />

    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#c0c0c0" />

    <TextView
        android:id="@+id/customize_real"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/set_real_password"
        android:textSize="20sp" />

    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#c0c0c0" />

    <TextView
        android:id="@+id/settings_start_fake_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/start_fake_lock"
        android:textSize="20sp" />

    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#c0c0c0" />

    <TextView
        android:id="@+id/settings_stop_fake_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/stop_fake_lock"
        android:textSize="20sp" />
</LinearLayout>